# stm32f469i-disco-template

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  toolchain.cmake
maybe_useful_stuff/: STM32F469NIHx_FLASH.ld
ozone/: stm32f469-hello-world.jdebug
src/: hello-world.cpp
src/applications/hello-world/: hello-world.cpp
src/bsp/implementation/: bsp_init.cpp  bsp_internals.hpp  bsp_leds.cpp
src/bsp/include/: bsp_init.hpp  bsp_leds.hpp
src/hal/: hal_core_types.hpp  hal_gpio.hpp
startup/: linkscript.ld  startup.c
